--- a/code-server/Dockerfile
+++ b/code-server/Dockerfile
@@ -7,4 +7,4 @@ RUN apt-get update -y \
 	apt-get install -y 
 
 # install
-curl -fsSL https://code-server.dev/install.sh | sh
+RUN curl -fsSL https://code-server.dev/install.sh | sh
