--- a/code-server/Dockerfile
+++ b/code-server/Dockerfile
@@ -4,7 +4,8 @@ FROM node:latest AS build
 # Update
 RUN apt-get update -y \
 	apt-get upgrade -y \
-	apt-get install -y 
+	apt-get install -y \
+	apt-get install curl -y
 
 # install
 RUN curl -fsSL https://code-server.dev/install.sh | sh
