--- a/code-server/Dockerfile
+++ b/code-server/Dockerfile
@@ -2,9 +2,9 @@
 FROM node:latest AS build
 
 # Update
-RUN apt-get update -y \
-	apt-get upgrade -y \
-	apt-get install -y \
+RUN apt-get update -y && \
+	apt-get upgrade -y && \
+	apt-get install -y && \
 	apt-get install curl -y
 
 # install
