--- a/code-server/Dockerfile
+++ b/code-server/Dockerfile
@@ -1,6 +1,14 @@
 # Node-Base
 FROM node:latest AS build
 
+# ARG
+ARG password=password
+
+# Mounting
+VOLUME [/dependencies]
+VOLUME [/config]
+VOLUME [/workspace]
+
 # Update
 RUN apt-get update -y && \
 	apt-get upgrade -y && \
@@ -9,3 +17,9 @@ RUN apt-get update -y && \
 
 # install
 RUN curl -fsSL https://code-server.dev/install.sh | sh
+
+# run custom script
+RUN /dependencies/dependencies.sh
+
+# start code-server
+RUN code-server --auth ${password} /workspace
