--- a/jenkins-server/Dockerfile
+++ b/jenkins-server/Dockerfile
@@ -7,9 +7,9 @@ RUN apt-get update -y && \
 	apt-get install -y && \
 	apt-get install wget curl apt-transport-https ca-certificates gnupg-agent software-properties-common -y
 
-RUN wget -q -O - https://pkg.jenkins.io/debian/jenkins.io.key | sudo apt-key add - \
-	curl -fsSL https://download.docker.com/linux/debian/gpg | sudo apt-key add - \
-	deb https://pkg.jenkins.io/debian binary/ \
+RUN wget -q -O - https://pkg.jenkins.io/debian/jenkins.io.key | sudo apt-key add -
+RUN curl -fsSL https://download.docker.com/linux/debian/gpg | sudo apt-key add -
+RUN deb https://pkg.jenkins.io/debian binary/ \
 	apt-key fingerprint 0EBFCD88 \
 	add-apt-repository \
    	"deb [arch=amd64] https://download.docker.com/linux/debian \
