--- a/jenkins-server/Dockerfile
+++ b/jenkins-server/Dockerfile
@@ -9,7 +9,8 @@ RUN apt-get update -y && \
 
 RUN wget -q -O - https://pkg.jenkins.io/debian/jenkins.io.key | apt-key add -
 RUN curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
-RUN deb https://pkg.jenkins.io/debian binary/ 
+RUN echo 'deb https://pkg.jenkins.io/debian binary/'  >> /etc/apt/sources.list \
+	cat /etc/apt/sources.list
 RUN apt-key fingerprint 0EBFCD88 
 RUN	add-apt-repository \
    	"deb [arch=amd64] https://download.docker.com/linux/debian \
