--- a/jenkins-server/Dockerfile
+++ b/jenkins-server/Dockerfile
@@ -9,16 +9,12 @@ RUN apt-get update -y && \
 
 RUN wget -q -O - https://pkg.jenkins.io/debian/jenkins.io.key | apt-key add -
 RUN curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
-RUN echo 'deb https://pkg.jenkins.io/debian binary/'  >> /etc/apt/sources.list \
-	cat /etc/apt/sources.list
+RUN echo "deb https://pkg.jenkins.io/debian binary/"  >> /etc/apt/sources.list
+RUN	cat /etc/apt/sources.list
 RUN apt-key fingerprint 0EBFCD88 
-RUN	add-apt-repository \
-   	"deb [arch=amd64] https://download.docker.com/linux/debian \
-   	$(lsb_release -cs) \
-   	stable" 
-
-RUN apt-get update -y \
-	apt-get install jenkins docker-ce docker-ce-cli containerd.io -y	
+RUN	add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian \ $(lsb_release -cs) \ stable" 
+RUN apt-get update -y
+RUN	apt-get install jenkins docker-ce docker-ce-cli containerd.io -y	
 
 # Port Exposing
 EXPOSE 8090
