--- a/jenkins-server/Dockerfile
+++ b/jenkins-server/Dockerfile
@@ -5,10 +5,10 @@ FROM debian:latest
 RUN apt-get update -y && \
 	apt-get upgrade -y && \
 	apt-get install -y && \
-	apt-get install wget curl apt-transport-https ca-certificates gnupg-agent software-properties-common gnupg2 docker.io -y \
-	wget -q -O - https://pkg.jenkins.io/debian/jenkins.io.key | apt-key add - \
-	echo "deb https://pkg.jenkins.io/debian binary/"  >> /etc/apt/sources.list \
-	apt-get update -y \ 
+	apt-get install wget curl apt-transport-https ca-certificates gnupg-agent software-properties-common gnupg2 docker.io -y && \
+	wget -q -O - https://pkg.jenkins.io/debian/jenkins.io.key | apt-key add - && \
+	echo "deb https://pkg.jenkins.io/debian binary/"  >> /etc/apt/sources.list && \
+	apt-get update -y && \ 
 	apt-get install jenkins -y
 
 # Port Exposing
