--- a/code-server/Dockerfile
+++ b/code-server/Dockerfile
@@ -20,11 +20,11 @@ RUN curl -fsSL https://code-server.dev/install.sh | sh
 
 # copy and run custom script
 COPY /code-server/custom.sh /
-RUN chmod +x /custom.sh \
+RUN command chmod +x /custom.sh \
 	/custom.sh
 
 # start code-server
-CMD code-server --auth ${password} /workspace
+RUN code-server --auth ${password} /workspace
 
 # Port Exposing
 EXPOSE 8080
