--- a/code-server/Dockerfile
+++ b/code-server/Dockerfile
@@ -20,7 +20,7 @@ RUN curl -fsSL https://code-server.dev/install.sh | sh
 
 # copy and run custom script
 COPY /code-server/custom.sh /
-RUN command chmod +x /custom.sh \
+RUN chmod +x /custom.sh \
 	/custom.sh
 
 # start code-server
