--- a/code-server/Dockerfile
+++ b/code-server/Dockerfile
@@ -24,7 +24,7 @@ RUN chmod +x /custom.sh \
 	/custom.sh
 
 # start code-server
-RUN code-server --auth ${password} /workspace
+RUN code-server --auth $password /workspace
 
 # Port Exposing
 EXPOSE 8080
