--- a/code-server/Dockerfile
+++ b/code-server/Dockerfile
@@ -1,8 +1,5 @@
 # Node-Base
-FROM node:latest AS build
-
-# ENV
-ENV password="password"
+FROM node:latest
 
 # Mounting
 VOLUME [/dependencies]
@@ -25,6 +22,9 @@ RUN chmod +x /custom.sh \
 
 # start code-server
 CMD [ "code-server", "--config /config", "/workspace" ]
+
+# make configfile editable
+RUN chmod 777 -r /config
 
 # Port Exposing
 EXPOSE 8080
