--- a/jenkins-server/Dockerfile
+++ b/jenkins-server/Dockerfile
@@ -9,6 +9,8 @@ RUN apk add docker
 RUN curl -L "https://github.com/docker/compose/releases/download/1.25.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && \
     chmod +x /usr/local/bin/docker-compose && \
     ln -sf /usr/local/bin/docker-compose /usr/bin/docker-compose
+RUN usermod -a -G root jenkins
+USER jenkins
 
 VOLUME /config
 
