--- a/jenkins-server/Dockerfile
+++ b/jenkins-server/Dockerfile
@@ -1,14 +1,16 @@
-# Jenkins-Base
-FROM jenkins/jenkins:alpine as base
-
-# Update and install Jenkins + Docker
+FROM jenkins/jenkins:lts
+ 
 USER root
-RUN apk add --update docker openrc
-RUN rc-update add docker boot
-RUN echo "jenkins ALL=NOPASSWD: ALL" >> /etc/sudoers \
-      && printf '#!/bin/bash\nsudo /usr/bin/docker "$@"' > /usr/local/bin/docker \
-      && chmod +x /usr/local/bin/docker
-USER jenkins
+RUN apt-get update -qq \
+    && apt-get install -qqy apt-transport-https ca-certificates curl gnupg2 software-properties-common 
+RUN curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
+RUN add-apt-repository \
+   "deb [arch=amd64] https://download.docker.com/linux/debian \
+   $(lsb_release -cs) \
+   stable"
+RUN apt-get update  -qq \
+    && apt-get install docker-ce=17.12.1~ce-0~debian -y
+RUN usermod -aG docker jenkins
 
 VOLUME /var/jenkins_home
 VOLUME /var/run/docker.sock
