--- a/jenkins-server/Jenkinsfile
+++ b/jenkins-server/Jenkinsfile
@@ -10,7 +10,7 @@ node {
         /* This builds the actual image; synonymous to
          * docker build on the command line */
 
-        app = docker.build("jenkins-docker", "jenkins-server/Dockerfile")
+        app = docker.build("jenkins-docker", "jenkins-server/")
     }
 
     stage('Test image') {
