--- a/jenkins-server/Jenkinsfile
+++ b/jenkins-server/Jenkinsfile
@@ -29,8 +29,8 @@ node {
          * Second, the 'latest' tag.
          * Pushing multiple tags is cheap, as all the layers are reused. */
         docker.withRegistry('https://registry.hub.docker.com', 'dockerHub') {
-            app.push(registryname + "${env.BUILD_NUMBER}-dev")
-            app.push(registryname + "dev")
+            app.push("${env.BUILD_NUMBER}-dev")
+            app.push("dev")
         }
         
     }
