--- a/jenkins-server/Jenkinsfile
+++ b/jenkins-server/Jenkinsfile
@@ -19,8 +19,8 @@ node {
 
     stage('Push image') {
         docker.withRegistry('https://registry.hub.docker.com', 'dockerHub') {
-            app.push("${env.BUILD_NUMBER}-dev")
-            app.push("dev")
+            app.push("${env.BUILD_NUMBER}-stable")
+            app.push("latest")
         }
         
     }
